add basic mongo layer